--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-events",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
   "homepage": "https://github.com/rogierschouten/ts-events",
   "bugs": {
@@ -50,29 +50,29 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@types/assert": "0.0.31",
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.33",
-    "@types/node": "^7.0.0",
-    "@types/source-map-support": "^0.2.28",
+    "@types/assert": "^1.4.1",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.21",
+    "@types/source-map-support": "^0.4.1",
     "assert": "^1.4.1",
-    "browserify": "^14.1.0",
+    "browserify": "^16.2.3",
     "browserify-umdify": "^1.0.3",
-    "chai": "^3.5.0",
-    "glob": "^7.1.1",
+    "chai": "^4.2.0",
+    "glob": "^7.1.3",
     "istanbul": "^0.4.5",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
+    "karma-mocha-reporter": "^2.2.5",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
-    "source-map-support": "^0.4.6",
-    "tslint": "^5.0.0",
-    "typescript": "^2.0.10",
-    "uglify-js": "^2.7.4",
-    "util": "^0.10.3"
+    "mocha": "^5.2.0",
+    "rimraf": "^2.6.3",
+    "source-map-support": "^0.5.10",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.1",
+    "uglify-js": "^3.4.9",
+    "util": "^0.11.1"
   }
 }
